# singi

zero_test/: CMakeLists.txt  README.rst  nrf52840dk_nrf52840.overlay  nrf52dk_nrf52832.overlay  nrf5340_cpuapp_common.overlay  nrf5340dk_nrf5340_cpuapp.overlay  nrf5340dk_nrf5340_cpunet.overlay  prj.conf
zero_test/src/: blinky.c  dk_led_and_button.c  hello_world.c  main.c  main_uart.c  uart.c
